--- a/static/read_biomes.html
+++ b/static/read_biomes.html
@@ -77,20 +77,9 @@
                     TOGGLE GRID
                 </button>
                 <select id="minecraftVersion">
-                    <option value="1.3">Java 1.3 - 1.6</option>
-                    <option value="1.7">Java 1.7 - 1.12</option>
-                    <option value="1.13">Java 1.13</option>
-                    <option value="1.14">Java 1.14</option>
                     <option value="1.15">Java 1.15 - Java 1.16.1</option>
-                    <option value="1.16" selected
-                        >Java 1.16.2 - Java 1.17</option
-                    >
-                    <option value="TreasureMap13"
-                        >Java 1.13-1.14 Treasure Map</option
-                    >
-                    <option value="TreasureMap15"
-                        >Java 1.15+ Treasure Map</option
-                    >
+                    <option value="1.16">Java 1.16.2 - Java 1.17</option>
+                    <option value="1.18" selected>Java 1.18</option>
                 </select>
                 <a id="download" download="biome_map.png">
                     <button type="button" onClick="download()">
@@ -342,95 +331,9 @@
             document
                 .getElementById("minecraftVersion")
                 .addEventListener("input", function(event) {
-                    // Try to be clever about changing the layer
-                    let old_v = minecraft_version;
-                    let new_v = document.getElementById("minecraftVersion")
-                        .value;
-
-                    minecraft_version = new_v;
-                    let lastLayer =
-                        document.getElementById("lastLayer").value | 0;
-                    if (new_v == "1.3") {
-                        // Set layer to 33
-                        updateWithLayerPlus(33 - lastLayer);
-                    }
-                    if (old_v == "1.3") {
-                        if (new_v == "1.7") {
-                            // Set layer to 43
-                            updateWithLayerPlus(43 - lastLayer);
-                        }
-                        if (
-                            new_v == "1.13" ||
-                            new_v == "1.14" ||
-                            new_v == "1.15" ||
-                            new_v == "1.16" ||
-                            new_v == "TreasureMap13" ||
-                            new_v == "TreasureMap15"
-                        ) {
-                            // Set layer to 51
-                            updateWithLayerPlus(51 - lastLayer);
-                        }
-                    }
-
-                    if (
-                        old_v == "1.7" &&
-                        (new_v == "1.13" ||
-                            new_v == "1.14" ||
-                            new_v == "1.15" ||
-                            new_v == "1.16" ||
-                            new_v == "TreasureMap13" ||
-                            new_v == "TreasureMap15")
-                    ) {
-                        if (lastLayer == 42) {
-                            updateWithLayerPlus(50 - 42);
-                        }
-                        if (lastLayer == 43) {
-                            updateWithLayerPlus(51 - 43);
-                        }
-                    }
-                    if (
-                        (old_v == "1.13" ||
-                            old_v == "1.14" ||
-                            old_v == "1.15" ||
-                            old_v == "1.16" ||
-                            old_v == "TreasureMap13" ||
-                            old_v == "TreasureMap15") &&
-                        new_v == "1.7"
-                    ) {
-                        if (lastLayer == 51) {
-                            updateWithLayerPlus(43 - 51);
-                        }
-                        if (lastLayer == 50) {
-                            updateWithLayerPlus(42 - 50);
-                        }
-                        if (lastLayer >= 43 && lastLayer <= 49) {
-                            updateWithLayerPlus(42 - lastLayer);
-                        }
-                    }
-                    if (
-                        (old_v == "1.13" ||
-                            old_v == "1.14" ||
-                            old_v == "1.15" ||
-                            old_v == "1.16") &&
-                        (new_v == "TreasureMap13" || new_v == "TreasureMap15")
-                    ) {
-                        // Set layer to 51
-                        updateWithLayerPlus(51 - lastLayer);
-                    }
-                    if (
-                        (old_v == "TreasureMap13" ||
-                            old_v == "TreasureMap15") &&
-                        (new_v == "1.13" ||
-                            new_v == "1.14" ||
-                            new_v == "1.15" ||
-                            new_v == "1.16")
-                    ) {
-                        // Set layer to 51
-                        updateWithLayerPlus(51 - lastLayer);
-                    }
-
-                    let ws = document.getElementById("worldSeed");
-                    Game.clear(minecraft_version + ";" + ws.value);
+                    let y_offset_input = document.getElementById("y_offset");
+                    Game.clear("y=" + (y_offset_input.value | 0));
+                    Game.clearLruCache();
                 });
             function updateWithLayerPlus(x) {
                 let i = document.getElementById("lastLayer").value | 0;
