Add dedicated render_to_image function to canvas
Improves image quality to lossless

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -127,8 +127,7 @@
             // https://stackoverflow.com/a/42546234
             function download() {
                 var download = document.getElementById("download");
-                var image = document
-                    .getElementById("demo")
+                var image = Game.render_to_image()
                     .toDataURL("image/png")
                     .replace("image/png", "image/octet-stream");
                 download.setAttribute("href", image);
