Remove extra space from download map button

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -95,8 +95,8 @@
                 <a id="download" download="biome_map.png">
                     <button type="button" onClick="download()">
                         DOWNLOAD MAP
-                    </button>
-                </a>
+                    </button></a
+                >
                 Cache size:
                 <input type="text" id="lruCacheSize" size="2" value="3" />
                 <button onClick="Game.clearLruCache()">Clear cache</button>
