--- a/static/biomes.html
+++ b/static/biomes.html
@@ -296,10 +296,13 @@
                 .value;
             {
                 let scales;
+                let i;
                 if (minecraft_version == "1.3") {
                     scales = scales13;
+                    i = 33;
                 } else if (minecraft_version == "1.7") {
                     scales = scales17;
+                    i = 43;
                 } else if (
                     minecraft_version == "1.13" ||
                     minecraft_version == "1.14" ||
@@ -309,15 +312,16 @@
                     minecraft_version == "TreasureMap15"
                 ) {
                     scales = scales113;
+                    i = 51;
                 } else if (minecraft_version == "1.18") {
                     scales = scales118;
+                    i = 8;
                 } else {
                     console.error(
                         "Unknown Minecraft version: " + minecraft_version
                     );
+                    i = 0;
                 }
-                //let i = document.getElementById("lastLayer").value|0;
-                let i = 8;
                 document.getElementById("lastLayer").value = i;
                 if (i >= 0 && i <= 43) {
                     layerScale = scales[i];
