This is not the 1.18 treasure map

--- a/static/biomes.html
+++ b/static/biomes.html
@@ -87,7 +87,7 @@
                         >Java 1.13-1.14 Treasure Map</option
                     >
                     <option value="TreasureMap15"
-                        >Java 1.15+ Treasure Map</option
+                        >Java 1.15-1.17 Treasure Map</option
                     >
                 </select>
                 <span>Select y-level (0 for caves, 63 for surface)</span>
