Disable nbt_search demo

--- a/static/nbt_search.html
+++ b/static/nbt_search.html
@@ -110,7 +110,14 @@
         >
             <div class="card" style="grid-column: 1 / 2; grid-row: 1 / 2;">
                 Find strings in a NBT file
+                <br />
+                WARNING: this no longer works, if you want to use this tool,
+                please open an issue and describe your use case.
+                <a href="https://github.com/Badel2/slime_seed_finder/issues/33"
+                    >Github issue</a
+                >
             </div>
+            <!--
             <div class="card" style="grid-column: 1 / 2; grid-row: 2 / 3;">
                 Select a NBT file or a zip archive with many NBT files inside<br />
                 This file will not be uploaded to any server, don't worry.<br /><br />
@@ -137,6 +144,7 @@
 Search results will appear here.</textarea
                 >
             </div>
+            -->
         </div>
         <script type="text/javascript" src="slime_seed_finder_web.js"></script>
         <script type="text/javascript" src="nbt_search.js"></script>
