--- a/static/nbt_search.html
+++ b/static/nbt_search.html
@@ -8,7 +8,8 @@
             body {
                 background-color: #eee;
             }
-            input {
+            /* https://stackoverflow.com/a/6652090 */
+            input:not([type="checkbox"]) {
                 font-family: monospace;
                 height: 40px;
             }
