Add option to ignore cave spider spawners in multi spawner demo

--- a/static/multi_spawner.html
+++ b/static/multi_spawner.html
@@ -160,6 +160,9 @@
                         <option value="DIM1">End</option>
                     </select>
                     <br />
+                    <input type="checkbox" id="ignore_cave_spiders" /> Ignore
+                    cave spiders
+                    <br />
                 </div>
                 Start search:
                 <button
